--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.5.0",
     "@eva-design/eva": "^2.1.1",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@tradle/react-native-http": "^2.0.0",
